--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -55,9 +55,17 @@
 	list-style: none;
 }
 
-.item-name {
-	width: 40%;
-	display: inline-block;
+.item-half {
+	.item-name {
+		width: 40%;
+		display: inline-block;
+	}
+}
+
+.item-full {
+	.item-name {
+		display: block;
+	}
 }
 
 .item {
@@ -65,12 +73,23 @@
 	margin-bottom: 5px;
 }
 
+.editable-wrap {
+
+
+}
+
 .editable-field {
-	display: inline-block;
 	border-radius: 2px;
+	display: inline-block;
 	cursor: text;
 	box-shadow: 0 0 0 0;
 	padding-left: 5px;
+	padding-right: 5px;
+
+	border-bottom: 0px solid black !important;
+	white-space: normal !important;
+	color: black;
+
 	&:hover {
 		box-shadow: 0 0 0 1px $gray-light;
 		.overlay-icon {
@@ -80,6 +99,7 @@
 
 	.overlay-icon {
 		top: 0px;
+		right: -5px;
 		opacity: 0;
 		padding: 8px;
 		background-color: $gray-lighter;
@@ -87,4 +107,5 @@
 		cursor: pointer;
 		color: $gray-light;
 	}
+
 }
