--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -73,9 +73,9 @@
 	margin-bottom: 5px;
 }
 
-.editable-wrap {
-
-
+.non-editable-field {
+	display: inline-block;
+	padding-left: 5px;
 }
 
 .editable-field {
