--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "editable/bootstrap-editable";
+@import 'bootstrap-datetimepicker';
 // @import "jquery.minicolors";
 
 .container-fluid {
