--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -83,6 +83,7 @@
 	display: inline-block;
 	cursor: text;
 	box-shadow: 0 0 0 0;
+	transition: box-shadow 100ms ease-in 0ms;
 	padding-left: 5px;
 	padding-right: 5px;
 
@@ -92,6 +93,7 @@
 
 	&:hover {
 		box-shadow: 0 0 0 1px $gray-light;
+		color: black;
 		.overlay-icon {
 			opacity: 1;
 		}
@@ -101,6 +103,7 @@
 		top: 0px;
 		right: -5px;
 		opacity: 0;
+		transition: opacity 100ms ease-in 0ms;
 		padding: 8px;
 		background-color: $gray-lighter;
 		border-left: 1px solid $gray-light;
