Close date inline editor when clicking outside of it. Use outside event jquery plugin

--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -3,6 +3,7 @@
 <%= javascript_include_tag "comments" %>
 <%= javascript_include_tag "request_attachments" %>
 <%= javascript_include_tag "statuses" %>
+<%= javascript_include_tag "jquery.ba-outside-events.min" %>
 
 <div class="page-header">
 	<h1><%= @publication_request["event"] %></h1>
