--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -1,118 +1,133 @@
 // Place all the styles related to the PublicationRequests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 @import "bootstrap";
-
 .workflow {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 .current-status {
-	font-size: 20px;
+  font-size: 20px;
 }
-
 #chosen-template {
-	text-align: center;
+  text-align: center;
 }
-
 .request-thumb {
-	margin: 10px;
-	min-width: 200px;
-	background-color: #F7F7F9;
-	text-align: center;
-	display: inline-block;
-	position: relative;
-	overflow: hidden;
-	padding: 5px 15px;
-	a {
-		display: inline-block;
-		position: relative;
-		height: 100%;
-		width: 100%;
-		color: black;
-		&:hover {
-			text-decoration: none;
-			color: black;
-		}
-		&:active {
-			text-decoration: none;
-		}
-		&:focus {
-			text-decoration: none;
-		}
-	}
+  margin: 10px;
+  min-width: 200px;
+  background-color: #F7F7F9;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  padding: 5px 15px;
+  a {
+    display: inline-block;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    color: black;
+    &:hover {
+      text-decoration: none;
+      color: black;
+    }
+    &:active {
+      text-decoration: none;
+    }
+    &:focus {
+      text-decoration: none;
+    }
+  }
 }
-
 .request-cell:hover {
-	transform: scale(1.1);
-	box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.2);
-	z-index: 999;
+  transform: scale(1.1);
+  box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.2);
+  z-index: 999;
 }
-
 .module-content .list {
-	padding-left: 0px;
-	list-style: none;
+  padding-left: 0;
+  list-style: none;
 }
-
 .item-half {
-	.item-name {
-		width: 40%;
-		display: inline-block;
-	}
+  .item-name {
+    width: 40%;
+    display: inline-block;
+  }
 }
-
 .item-full {
-	.item-name {
-		display: block;
-	}
+  .item-name {
+    display: block;
+  }
 }
-
 .item {
-	margin-top: 5px;
-	margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-
 .non-editable-field {
-	display: inline-block;
-	padding-left: 5px;
+  display: inline-block;
+  padding-left: 5px;
 }
-
 .editable-field {
-	border-radius: 2px;
-	display: inline-block;
-	cursor: text;
-	box-shadow: 0 0 0 0;
-	transition: box-shadow 100ms ease-in 0ms;
-	padding-left: 5px;
-	padding-right: 5px;
-
-	border-bottom: 0px solid black !important;
-	white-space: normal !important;
-	color: black;
-
-	&:hover {
-		box-shadow: 0 0 0 1px $gray-light;
-		color: black;
-		.overlay-icon {
-			opacity: 1;
-		}
-	}
-
-	.overlay-icon {
-		top: 0px;
-		right: -5px;
-		opacity: 0;
-		transition: opacity 100ms ease-in 0ms;
-		padding: 8px;
-		background-color: $gray-lighter;
-		border-left: 1px solid $gray-light;
-		cursor: pointer;
-		color: $gray-light;
-	}
-
+  border-radius: 2px;
+  display: inline-block;
+  cursor: text;
+  box-shadow: 0 0 0 0;
+  transition: box-shadow 100ms ease-in 0;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom: 0 solid black !important;
+  white-space: normal !important;
+  color: black;
+  &:hover {
+    box-shadow: 0 0 0 1px $gray-light;
+    color: black;
+    .overlay-icon {
+      opacity: 1;
+    }
+  }
+  .overlay-icon {
+    top: 0;
+    right: -5px;
+    opacity: 0;
+    transition: opacity 100ms ease-in 0;
+    padding: 8px;
+    background-color: $gray-lighter;
+    border-left: 1px solid $gray-light;
+    cursor: pointer;
+    color: $gray-light;
+  }
+  .bottom {
+    display: block;
+    border-left: 0 solid $gray-lighter;
+    right: 0;
+  }
 }
-
 .date-field {
-	width: 60%;
+  width: 60%;
+}
+.popover {
+  max-width: 500px !important;
+  // width: 500px !important;
+}
+.new-template-popover {
+	padding: 5px;
+  cursor: default;
+  width: 382px;
+  max-height: 500px;
+  overflow-y: scroll;
+
+  .template-option {
+    margin: 3px;
+    display: inline-block;
+    float: left;
+    .img-thumbnail {
+      &:hover {
+				cursor: pointer;
+				position: relative;
+				z-index: 2;
+        box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.56);
+        filter:brightness(1.1);
+        -webkit-filter: brightness(1.1);
+      }
+    }
+  }
 }
