--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -139,4 +139,36 @@
       }
     }
   }
+
+	.no-template {
+
+
+		.img-thumbnail {
+			width: 110px;
+			height: 110px;
+			position: relative;
+			width: 110px;
+			height: 110px;
+			background-color: $gray-lighter;
+			color: $gray-light;
+			font-size: 30px;
+
+			&:hover {
+				filter: brightness(0.8);
+				-webkit-filter: brightness(0.8);
+			}
+		}
+
+		.text {
+			font-size: 11px;
+			text-align: center;
+		}
+
+		.glyphicon {
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  transform: translateX(-50%) translateY(-50%);
+		}
+	}
 }
