--- a/app/views/publication_requests/_choose_new_template.html.erb
+++ b/app/views/publication_requests/_choose_new_template.html.erb
@@ -4,4 +4,10 @@
       <%= image_tag(template['image_large_thumb'], class: 'img-thumbnail') %>
     <% end %>
   <% end %>
+  <%= content_tag(:div, class: 'template-option no-template', data: { id: 'nil' }) do %>
+    <div class="img-thumbnail">
+      <span class="glyphicon glyphicon-remove-circle"></span>
+      <div class="text">No template</div>
+    </div>
+  <% end %>
 </div>
