--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
       <ul class="nav nav-pills">
         <li role="presentation" id="home-btn"><%= link_to "Home", root_path %></li>
         <% if(can?(:create, Template) || can?(:create, User) || can?(:create, Status)) %>
-          <li role="presentation" class="dropdown">
-            <a class="dropdown-toggle" href="#" role="button" id="admin-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li role="presentation" class="dropdown" id="admin-dropdown">
+            <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Admin
               <span class="caret"></span>
             </a>
