Inline editing for users. Made sure currently logged in user can't change their email

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -182,6 +182,12 @@ textarea {
 	}
 }
 
+.editable-disabled {
+	&:hover {
+		cursor: not-allowed !important;
+	}
+}
+
 .date-field {
   width: 60%;
 }
