--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,54 @@
-<h1><%= @user.first_name %> <%= @user.last_name %></h1>
-<% if can? :update, @user %>
-	<%= link_to "Edit profile", edit_user_path(@user), id: "edit-profile" %>
-<% end %>
+<div class="page-header">
+  <h1>User Info<small></small></h1>
+</div>
 
-<h3>Email:</h3> <%= @user.email %>
+<div class="row">
+	<div class="col-md-2">
+	  <h3>Profile</h3>
+	</div>
+  <div class="col-md-6 user-info">
+		<div class="name">
+			Name:
+			<% if can? :update, @user %>
+				<%= link_to "#", id: 'first-name-field', class: 'editable-field editable',
+														 data: {
+															 pk: @user.id,
+															 model: 'user',
+															 name: 'first_name',
+															 type: 'text',
+															 url: user_path(@user.id),
+															 title: 'First Name'
+														 } do %>
+						<%= @user.first_name%>
+					<% end %>
 
+					<%= link_to "#", id: 'last-name-field', class: 'editable-field editable',
+															 data: {
+																 pk: @user.id,
+																 model: 'user',
+																 name: 'last_name',
+																 type: 'text',
+																 url: user_path(@user.id),
+																 title: 'last Name'
+															 } do %>
+							<%= @user.last_name%>
+						<% end %>
+			<% else %>
+				<%= @user.first_name %> <%= @user.last_name %>
+			<% end %>
+	  </div>
+		<div class="email">
+			Email: <%= @user.email %> <small>(to change your password, ask an admin)</small>
+		</div>
+	</div>
+
+</div>
+
+<div class="row">
+	<div class="col-md-2">
+		<h3>Change Password<small></small></h3>
+	</div>
+	<div class="col-md-6">
+	  
+	</div>
+</div>
