--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,10 +52,8 @@
 			<h3>Change Password<small></small></h3>
 		</div>
 		<div class="col-md-6">
-			<%= form_for @pass_form, url: passwords_path, method: :post do |f| %>
-
-				<%= f.hidden_field :user_id, :value => @user.id %>
-
+			<%= form_for @user, url: update_password_user_path(@user), method: :put do |f| %>
+        <%= errors_from_json @errors %>
 				<%= f.label :current_password, "Current Password", class: "control-label" %>
 			  <%= f.password_field :current_password, class: "form-control", placeholder: "enter your current password" %>
 
