--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -3,15 +3,15 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12">
-    <%= form_tag password_resets_path, :method => :post, class: "form-inline" do %>
+  <div class="col-md-offset-4 col-md-4 col-xs-12">
+    <%= form_tag password_resets_path, :method => :post do %>
       <div class="field form-group">
         <%= label_tag :email %>
-        <%= text_field_tag :email, params[:email], class: "form-control" %>
+        <%= email_field_tag :email, params[:email], class: "form-control input-lg" %>
       </div>
 
-      <div class="actions">
-        <%= submit_tag "Reset Password", class: "btn btn-primary" %>
+      <div class="actions field form-group">
+        <%= submit_tag "Reset Password", class: "btn btn-primary btn-lg btn-block" %>
       </div>
     <% end %>
   </div>
