--- a/app/assets/stylesheets/request_attachments.scss
+++ b/app/assets/stylesheets/request_attachments.scss
@@ -10,6 +10,10 @@
 	&:hover {
 		background-color: $gray-lighter;
 		cursor: pointer;
+
+		.non-image {
+			background-color: #ddd;
+		}
 	}
 }
 
@@ -72,7 +76,7 @@ a.attachment-thumb-options-item {
 }
 
 /* Add Animation */
-.modal-content, #caption {    
+.modal-content, #caption {
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
@@ -80,12 +84,12 @@ a.attachment-thumb-options-item {
 }
 
 @-webkit-keyframes zoom {
-    from {transform:scale(0)} 
+    from {transform:scale(0)}
     to {transform:scale(1)}
 }
 
 @keyframes zoom {
-    from {transform:scale(0.1)} 
+    from {transform:scale(0.1)}
     to {transform:scale(1)}
 }
 
@@ -104,4 +108,16 @@ a.attachment-thumb-options-item {
     	text-decoration: none;
     	cursor: pointer;
     }
+}
+
+.non-image {
+	width: 100px;
+	height: 100px;
+	background-color: $gray-lighter;
+	color: $gray-light;
+	font-weight: bold;
+	font-size: 25px;
+	text-align: center;
+	line-height: 100px;
+
 }
