--- a/app/views/request_attachments/_show.html.erb
+++ b/app/views/request_attachments/_show.html.erb
@@ -1,11 +1,15 @@
 <div class="attachment">
-	
+
 	<%= render partial: "/users/label", locals: { user: attachment['user'] } %>
 
 	<div class="attachment-content media">
 		<div class="media-left">
 			<% if is_image_file?(attachment['file_content_type']) %>
-				<%= image_tag(attachment['file_large_thumb'], class: "media-object", "data-orig" => attachment['file_original']) %>
+				<%= image_tag(attachment['file_large_thumb'], class: "media-object image", "data-orig" => attachment['file_original']) %>
+			<% else %>
+				<div class="media-object non-image">
+					<%= attachment["file_file_name"].split('.')[-1].upcase %>
+				</div>
 			<% end %>
 		</div>
 		<div class="media-body media-middle">
@@ -35,8 +39,8 @@
 	</div>
 	<div class="footer">
 		<small>
-			
+
 		</small>
-		
+
 	</div>
 </div>
