--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -5,13 +5,19 @@
 <div class="row">
 	<div class="col-md-4 col-xs-4" id="chosen-template">
 		<strong>Template for this Request</strong></br>
-		<%= image_tag(@template["image_large"], class: "img-thumbnail") %>
+		<% if @template %>
+			<%= image_tag(@template["image_large"], class: "img-thumbnail") %>
+		<% else %>
+			<div class="img-thumbnail">No template for this request</div>
+		<% end %>
 	</div>
 	<div class="col-md-8 col-xs-8">
 		<%= form_for(@publication_request) do |f| %>
 			<%= errors_from_json @errors %>
 			<div class="row">
-				<%= f.hidden_field :template_id, :value => @template["id"] %>
+				<% if @template %>
+					<%= f.hidden_field :template_id, :value => @template["id"] %>
+				<% end %>
 
 				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :event) %>">
 				    <%= f.label :event, "Name of the event", class: "control-label" %>
@@ -65,7 +71,7 @@
 					<%= f.select :reviewer_id, @reviewers_options, {}, class: "form-control" %>
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<div class="col-md-offset-3 col-xs-offset-2 col-md-6 col-xs-8">
 					<%= f.submit("Submit", id: "submit-btn", class: "btn btn-primary btn-lg btn-block") %>
