--- a/app/views/templates/_index.html.erb
+++ b/app/views/templates/_index.html.erb
@@ -1,3 +1,6 @@
+<div class="template-cell">
+	<%= link_to(tag(:span, class: "glyphicon glyphicon-unchecked img-thumbnail"), new_publication_request_path) %>
+</div>
 <% templates.each do |template| %>
 	<div class="template-cell">
 		<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
