Styled no-template to look like templates in freewall

--- a/app/views/templates/_index.html.erb
+++ b/app/views/templates/_index.html.erb
@@ -1,5 +1,15 @@
+<!-- <button type="button" class="btn btn-primary btn-lg template-cell">
+  No Template
+</button> -->
 <div class="template-cell">
-	<%= link_to(tag(:span, class: "glyphicon glyphicon-unchecked img-thumbnail"), new_publication_request_path) %>
+	<%= link_to(new_publication_request_path) do %>
+		<div class="img-thumbnail no-template">
+			<span class="glyphicon glyphicon-ban-circle"></span>
+			<p>
+				No Template
+			</p>
+		</div>
+	<% end %>
 </div>
 <% templates.each do |template| %>
 	<div class="template-cell">
