--- a/app/assets/stylesheets/templates.css.scss
+++ b/app/assets/stylesheets/templates.css.scss
@@ -5,14 +5,12 @@
 	// background-color: lightgrey;
 	// padding:5px;
 	display: inline-block;
-
-}
-
-.template-cell img:hover {
-	position: relative;
-	transform: scale(1.1);
-	box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.4);
-	z-index: 999;
+	img:hover, div:hover {
+		position: relative;
+		transform: scale(1.1);
+		box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.4);
+		z-index: 999;
+	}
 }
 
 .template-delete {
@@ -21,4 +19,11 @@
 	.glyphicon {
 		margin-right: 3px;
 	}
+}
+
+.no-template {
+	font-size: 30px;
+	color: black;
+	width: 230px;
+	padding: 90px 0px !important;
 }
