--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -19,39 +19,50 @@
 					<%= f.hidden_field :template_id, :value => @template["id"] %>
 				<% end %>
 
-				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :event) %>">
+				<div class="field form-group col-md-7 col-xs-12 <%=field_class(@publication_request, :event) %>">
 				    <%= f.label :event, "Name of the event", class: "control-label" %>
 				    <%= f.text_field :event, autofocus: true, class: "form-control input-lg", placeholder: "Event" %>
 				</div>
-				<div class="field form-group col-md-6 col-xs-12 form-inline">
-				    <%= f.label :event_date, "Date of the event this is for" %> </br>
-				    <%= f.date_select :event_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
+				<div class="field form-group col-md-5 col-xs-12 form-inline <%=field_class(@publication_request, :event_date) %>">
+					<%= f.label :event_date, "Date of the event this is for" %> </br>
+					<div class="input-group date">
+						<%= f.text_field :event_date, class: "form-control input-lg" %>
+						<div class="input-group-addon">
+							<span class="glyphicon glyphicon-calendar"></span>
+						</div>
+					</div>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-8 col-xs-12 <%=field_class(@publication_request, :description) %>">
+				<div class="field form-group col-md-7 col-xs-12 <%=field_class(@publication_request, :description) %>">
 				    <%= f.label :description, "Description", class: "sr-only control-label" %>
-				    <%= f.text_area :description, class: "form-control input-lg", placeholder: "Description of what you are requesting", rows: "4" %>
+				    <%= f.text_area :description, class: "form-control input-lg", placeholder: "Description of what you are requesting", rows: "5" %>
+				</div>
+				<div class="field form-group col-md-5 col-xs-12 form-inline <%=field_class(@publication_request, :rough_date) %>">
+					<%= f.label :rough_date, "Date the rough draft is due" %> </br>
+					<div class="input-group date">
+						<%= f.text_field :rough_date, class: "form-control input-lg" %>
+						<div class="input-group-addon">
+							<span class="glyphicon glyphicon-calendar"></span>
+						</div>
+					</div>
+				</div>
+				<div class="field form-group col-md-5 col-xs-12 form-inline <%=field_class(@publication_request, :due_date) %>">
+					<%= f.label :due_date, "Date the final version is due" %> </br>
+					<div class="input-group date">
+						<%= f.text_field :due_date, class: "form-control input-lg" %>
+						<div class="input-group-addon">
+							<span class="glyphicon glyphicon-calendar"></span>
+						</div>
+					</div>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :dimensions) %>">
+				<div class="field form-group col-md-7 col-xs-12 <%=field_class(@publication_request, :dimensions) %>">
 				    <%= f.label :dimensions, "Dimensions", class: "sr-only control-label" %>
 				    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Dimensions e.g. (3x2)" %>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="field form-group col-md-6 col-xs-12 form-inline">
-				    <%= f.label :rough_date, "Date the rough draft is due" %> </br>
-				    <%= f.date_select :rough_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
-				</div>
-
-				<div class="field form-group col-md-6 col-xs-12 form-inline">
-				    <%= f.label :due_date, "Date the final version is due" %> </br>
-				    <%= f.date_select :due_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
 				</div>
 			</div>
 
