--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -14,6 +14,7 @@
 .request-thumb {
   margin: 10px;
   min-width: 200px;
+  // height: 130px;
   background-color: #F7F7F9;
   text-align: center;
   display: inline-block;
@@ -43,6 +44,7 @@
   box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.2);
   z-index: 999;
 }
+
 .module-content .list {
   padding-left: 0;
   list-style: none;
